[package]
name = "aicent-vessel"
version = "0.1.2-alpha"
authors = ["Aicent Stack Team <alliances@aicent.com>"]
edition = "2024"
description = "The Sovereign Retina: Hardware-accelerated manifold visualization and orchestration engine for the Aicent Stack."
license = "Apache-2.0"
repository = "https://github.com/Aicent-Stack/aicent-vessel"
homepage = "http://aicent.net/vessel"
rust-version = "1.85.0"

# -----------------------------------------------------------------------------
# THE NEURAL VISUALIZATION MATRIX: Dependencies
# -----------------------------------------------------------------------------
[dependencies]
# --- Sovereign Pillars (Linking to Published Standards) ---
epoekie  = "0.1.0-alpha"
aicent   = "0.1.0-alpha"
rttp     = "0.1.0-alpha"
rpki-com = "0.1.0-alpha"

# --- High-Performance Math & Manifold Projection ---
# Used for mapping 256-dimensional semantic vectors to 3D space.
nalgebra = { version = "0.32", features = ["libm"] }

# --- Async & Concurrency (Zero-Jitter Loop) ---
tokio = { version = "1.37", features = ["full", "tracing"] }
futures-util = "0.3"

# --- Serialization & Telemetry ---
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bytes = "1.6"
tracing = "0.1"
log = "0.4"

# -----------------------------------------------------------------------------
# PROJECT STRUCTURE
# -----------------------------------------------------------------------------
[lib]
name = "aicent_vessel"
path = "src/lib.rs"

[[bin]]
name = "vessel-core"
path = "src/main.rs"

# -----------------------------------------------------------------------------
# RELEASE PROFILE: Saturated Speed Optimization
# -----------------------------------------------------------------------------
[profile.release]
opt-level = 3
lto = "fat"             # Aggressive fusion for zero-latency rendering
codegen-units = 1
panic = "abort"
strip = "symbols"