[package]
name = "aicent-vessel"
version = "0.1.2-alpha"
authors = ["Aicent Stack Team <alliances@aicent.com>"]
edition = "2024"
description = "The Sovereign Retina: Hardware-accelerated manifold visualization and orchestration engine for the Aicent Stack."
license = "Apache-2.0"
repository = "https://github.com/Aicent-Stack/aicent-vessel"
homepage = "http://aicent.net/vessel"
rust-version = "1.85.0"

# -----------------------------------------------------------------------------
# BINARIES & EXAMPLES
# -----------------------------------------------------------------------------
[[bin]]
name = "vessel-core"
path = "src/main.rs"

[[example]]
name = "vessel-preview"
path = "examples/vessel_preview.rs"

# -----------------------------------------------------------------------------
# THE NEURAL VISUALIZATION MATRIX: Dependencies
# -----------------------------------------------------------------------------
[dependencies]
epoekie  = "0.1.0-alpha"
aicent   = "0.1.0-alpha"
rttp     = "0.1.0-alpha"
rpki-com = "0.1.0-alpha"

# 🛡️ FIX: Enabling 'serde-serialize' to allow 3D Manifolds to flow through the spine.
nalgebra = { version = "0.32", features = ["libm", "serde-serialize"] }

tokio = { version = "1.37", features = ["full", "tracing"] }
futures-util = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bytes = { version = "1.6", features = ["serde"] }
tracing = "0.1"
log = "0.4"

# -----------------------------------------------------------------------------
# RELEASE PROFILE: Saturated Speed Optimization
# -----------------------------------------------------------------------------
[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = "symbols"
