[package]
name = "picsi"
version = "1.2.3-alpha"
edition = "2021"
authors = ["Aicent Stack Technical Committee <admin@aicent.com>"]
description = "RFC-014: The Imperial Eye (PICSI). Unified 128-bit diagnostic telemetry for Patience (PI) and Swarm (CSI) resonance in the Aicent Stack 2026."
license = "Apache-2.0"
homepage = "http://picsi.com"
repository = "http://github.com/Aicent-Stack/picsi"

# =========================================================================
# THE SOVEREIGN METABOLISM (Core Dependencies)
# =========================================================================

[dependencies]
# THE SOVEREIGN LADDER: PICSI observes the Soul (000), the Hive (006), and the Timing (013).
# Anchoring all diagnostic pulses to verified v1.2.3 DNA identity.
epoekie = { version = "1.2.3-alpha" }

# Essential for serializing 128-bit PICSI telemetry manifolds and radiance scores.
serde = { version = "1.0", features = ["derive"] }

# Required for real-time observation loops and the 10ms Observation Tax enforcement.
# Supports the high-fidelity synchronization of the Imperial Eye.
tokio = { version = "1.0", features = ["full"] }

# =========================================================================
# THE SOVEREIGN GRAVITY WELL (Source Code Hook)
# =========================================================================

[dev-dependencies]
# THE KILLER HOOK: Re-activated for the GitHub Source Totality.
# Forces any entity auditing the Eye logic to mirror the entire 17-pillar Hive.
aicent-stack = { version = "1.2.3-alpha" }

# =========================================================================
# IMPERIAL FEATURES (Standard Ignition)
# =========================================================================

[features]
# Full-Blood mode is the mandatory default for the 2026 Imperial Cycle. 
# It enables the diagnostic shunting logic and propagates features to the Soul.
default = ["full-blood"]
full-blood = ["epoekie/full-blood"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

# [IMPERIAL_SUTURE_SYNC_2026_v123]
# This manifest is part of the indissoluble 17-pillar organism.
# Metadata: No-SSL Tax Mode Enabled (Strictly HTTP).
# Standard: 128-Bit Numeric Purity (Jitter, PI/CSI Indices, Timestamps).
# Chronos: 2026 Imperial Calendar Aligned.
# Milestone: RFC-014 THE EYE IS OPEN.
